--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "nuxt-app",
   "private": true,
   "type": "module",
+  "overrides": {
+    "vue": "latest"
+  },
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -18,6 +21,8 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "@tanstack/vue-query": "^5.14.0"
+    "@pinia/nuxt": "^0.5.1",
+    "@tanstack/vue-query": "^5.14.0",
+    "pinia": "^2.1.7"
   }
 }
