--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "nuxt-app",
   "private": true,
   "type": "module",
-  "overrides": {
-    "vue": "latest"
-  },
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -23,6 +20,7 @@
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
     "@tanstack/vue-query": "^5.14.0",
+    "mongoose": "^8.0.3",
     "pinia": "^2.1.7"
   }
 }
