--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@hebilicious/authjs-nuxt": "^0.3.5",
     "@nuxt/devtools": "latest",
     "@vueuse/nuxt": "^10.7.0",
-    "nuxt": "^3.8.2",
+    "nuxt": "^3.12.4",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5"
   },
@@ -21,6 +20,7 @@
     "@pinia/nuxt": "^0.5.1",
     "@tanstack/vue-query": "^5.14.0",
     "mongoose": "^8.0.3",
-    "pinia": "^2.1.7"
+    "pinia": "^2.1.7",
+    "pocketbase": "^0.21.4"
   }
 }
