--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "nuxt-app",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
-  "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "@vueuse/nuxt": "^10.7.0",
-    "nuxt": "^3.12.4",
-    "vue": "^3.3.10",
-    "vue-router": "^4.2.5"
-  },
-  "dependencies": {
-    "@pinia/nuxt": "^0.5.1",
-    "@tanstack/vue-query": "^5.14.0",
-    "mongoose": "^8.0.3",
-    "pinia": "^2.1.7",
-    "pocketbase": "^0.21.4"
-  }
+	"name": "nuxt-app",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"build": "nuxt build",
+		"dev": "nuxt dev",
+		"generate": "nuxt generate",
+		"preview": "nuxt preview",
+		"postinstall": "nuxt prepare",
+		"start": ".output/server/index.mjs"
+	},
+	"devDependencies": {
+		"@nuxt/devtools": "latest",
+		"@vueuse/nuxt": "^10.7.0",
+		"nuxt": "^3.12.4",
+		"vue": "^3.3.10",
+		"vue-router": "^4.2.5"
+	},
+	"dependencies": {
+		"@pinia/nuxt": "^0.5.1",
+		"@tanstack/vue-query": "^5.14.0",
+		"mongoose": "^8.0.3",
+		"pinia": "^2.1.7",
+		"pocketbase": "^0.21.4"
+	}
 }
